# aido

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  PROJECT.md  PROMPT.md  README.md  aido  aido.sh  mkdocs.yml  nohup.out  opencode.jsonc  package-lock.json  package.json  pyproject.toml  requirements.txt  run-tests  vitest.config.ts
.git-hooks/: pre-push
.github/workflows/: build.yml  mkdocs-deploy.yml
.sisyphus/: boulder.json
.sisyphus/plans/: aido-config-refactor.md
contrib/: aido-wrapper.sh  aido.service.template
docs/: api.md  architecture.md  commands.md  configuration.md  index.md  installation.md  providers.md  usage.md
proxy/: __init__.py  config.py  database.py  key_manager.py  server.py
scripts/: test-providers.ts
src/: auto.ts  cli.ts  daemon.ts  db.ts  detector.ts  env.ts  free-discovery.ts  http-utils.ts  hunt-gitleaks.ts  hunt.ts  key-rotation.ts  launch.ts  logger.ts  model-capabilities.ts  models-cache.ts  models.ts  ollama.ts  port-check.ts  priorities.ts  proxy.ts  rotator.ts  run.ts  safe-fetch.ts
tests/: aido_opencode_test.py  aido_test.sh  analytics-api.test.ts  analytics-db.test.ts  auto.test.ts  big-pickle-capabilities.test.ts  daemon.test.ts  db-models.test.ts  db.test.ts  detector.test.ts  enrichment.test.ts  env.test.ts  free-discovery.test.ts  integration.test.ts  key-rotation.test.ts  models.test.ts  ollama.test.ts  opencode-model-prefix.test.ts  parser.test.ts  proxy-start.test.ts  proxy.test.ts  rotator.test.ts  router.test.ts  run-specific-provider.test.ts  run.test.ts  safe-fetch.test.ts  systemd.test.ts
(+19 files in other folders)
