[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aido"
version = "1.1.0"
description = "Intelligent AI CLI with multi-provider support"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "AIDO Team", email = "info@aido.ai"}
]
keywords = ["ai", "cli", "ollama", "openai", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
aido = "aido:main"

[project.urls]
Homepage = "https://github.com/aldo-f/aido"
Issues = "https://github.com/aldo-f/aido/issues"

[tool.setuptools]
py-modules = ["aido"]

[tool.setuptools.packages.find]
where = ["."]
include = ["aido*"]
